[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagentbench"
version = "0.1.0"
description = "Benchmark and verification primitives for stateful agent systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
openai = ["openai>=2.29.0"]
postgres = ["psycopg[binary]>=3.2.0"]
speed = ["orjson>=3.10.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_data*", "openagentbench*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--capture=sys"
markers = [
    "postgres: marks tests that exercise PostgreSQL-backed integration paths",
]
